[gd_scene load_steps=2 format=3 uid="uid://dun7b06j57ndm"]

[ext_resource type="Script" uid="uid://dl8ebnpgqtw68" path="res://scripts/settings.gd" id="1"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 16.0
offset_top = 16.0
offset_right = 250.0
offset_bottom = 39.0
text = "Настройки лаунчера"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = 16.0
offset_top = 64.0
offset_right = -16.0
offset_bottom = 96.0
grow_horizontal = 2

[node name="DirLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Директория игры:"

[node name="DirPath" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="SelectDirButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Выбрать..."

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -56.0
offset_right = -16.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0

[node name="ResetButton" type="Button" parent="Buttons"]
layout_mode = 2
text = "Сброс"

[node name="Spacer" type="Control" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="Buttons"]
layout_mode = 2
text = "Назад"
